--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nathan Cheshire</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Prompt&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
+</head>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Prompt', sans-serif;
+        color: white;
+        background: #202731;
+    }
+
+    section {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 300px;
+        padding: 100px 20vw;
+    }
+
+    p {
+        font-size: 22px;
+    }
+
+    .intro {
+        font-size: 22px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px 10vw;
+        font: 'Prompt'
+    }
+
+    h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px 50px
+    }
+</style>
+
+<body>
+    <h1>
+        "Hello There" - Obi-Wan Kenobi
+    </h1>
+    <div class="intro">
+        While I am not (disappointingly) Obi-Wan Kenobi, I'd wager I know a great deal more about software engineering
+        than him. My name is Nathan Cheshire and I am a software engineer passionate about operating systems, web
+        development, and effective API design.
+    </div>
+    <section>
+        <h1>Nathan</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
+            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
+            voluptate ab totam fugiat sint nihil?
+        </p>
+    </section>
+    <section>
+        <h1>Nathan</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
+            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
+            voluptate ab totam fugiat sint nihil?
+        </p>
+    </section>
+    <section>
+        <h1>Nathan</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
+            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
+            voluptate ab totam fugiat sint nihil?
+        </p>
+    </section>
+    <section>
+        <h1>Nathan</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
+            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
+            voluptate ab totam fugiat sint nihil?
+        </p>
+    </section>
+</body>
+
+</html>
