--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Prompt&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital@1&display=swap" rel="stylesheet">
 </head>
 <style>
     body {
@@ -26,7 +27,7 @@
         flex-direction: column;
         align-items: center;
         min-height: 300px;
-        padding: 100px 20vw;
+        padding: 25px 15vw;
     }
 
     p {
@@ -38,7 +39,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0px 10vw;
+        padding: 30px 10vw;
         font: 'Prompt'
     }
 
@@ -48,6 +49,51 @@
         align-items: center;
         padding: 50px 50px
     }
+
+    .blue {
+        background: #588df0;
+    }
+
+    .footer {
+        height: 150px;
+        width: 100%;
+        background-color: #090b0e;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        overflow: hidden;
+        line-height: 0;
+    }
+
+    .footer-left {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 20px 20px;
+        font-family: "Anton";
+        font-size: 32px;
+        width: 33%;
+        text-align: left;
+        display: inline-block;
+    }
+
+    .footer-center {
+        width: 33%;
+        text-align: center;
+        display: inline-block;
+    }
+
+    .footer-right {
+        padding: 0.5vw 1vh;
+        text-align: center;
+        float: right;
+    }
 </style>
 
 <body>
@@ -55,11 +101,27 @@
         "Hello There" - Obi-Wan Kenobi
     </h1>
     <div class="intro">
-        While I am not (disappointingly) Obi-Wan Kenobi, I'd wager I know a great deal more about software engineering
-        than him. My name is Nathan Cheshire and I am a software engineer passionate about operating systems, web
-        development, and effective API design.
+        While I am not (disappointingly) Obi-Wan Kenobi, I'd wager I know a great deal more about software engineering,
+        mathematics, and STEM related subjects than him. I'm Nathan Cheshire, a software engineer
+        passionate about operating systems, web development, and effective API design.
     </div>
-    <section>
+    <section class="blue">
+        <h1>Nathan</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
+            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
+            voluptate ab totam fugiat sint nihil?
+        </p>
+        <div class="wave">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </section>
+    <section class="">
         <h1>Nathan</h1>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
@@ -83,14 +145,22 @@
             voluptate ab totam fugiat sint nihil?
         </p>
     </section>
-    <section>
-        <h1>Nathan</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
-            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
-            voluptate ab totam fugiat sint nihil?
+    <div class="footer">
+        <p class="footer-left">
+            Nate@NathanCheshire.com
         </p>
+        <p class="footer-center">
+        </p>
+        <img src="github.svg" width=130, height=130 class="footer-right", onclick="window.open('https://github.com/nathancheshire')">
+    </div>
     </section>
 </body>
+
+<script type="text/javascript">
+    var toolbar = document.getElementsByClassName("footer-right");
+    toolbar.onclick = function (e) {
+        alert("Hello");
+    };
+</script>
 
 </html>
