add degree, add waves for awards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             These documents serve basically the same information as this website, in a more compact way.
         </p>
         <div class="resume-button-holder">
-            <a onclick="window.open('https://drive.google.com/file/d/1-CYzPVwpUNVF9RBPiJrIEL6qMLwAO0xp/view?usp=sharing')">
+            <a
+                onclick="window.open('https://drive.google.com/file/d/1-CYzPVwpUNVF9RBPiJrIEL6qMLwAO0xp/view?usp=sharing')">
                 <svg class="icon-arrow before">
                     <use xlink:href="#arrow"></use>
                 </svg>
@@ -43,7 +44,8 @@
             </a>
         </div>
         <div class="skills-button-holder">
-            <a onclick="window.open('https://docs.google.com/document/d/1-E8aFeZdFNGffAxQVX5Gl3RB-jK3uElJFAR4xdPxZ9o/edit?usp=sharing')">
+            <a
+                onclick="window.open('https://docs.google.com/document/d/1-E8aFeZdFNGffAxQVX5Gl3RB-jK3uElJFAR4xdPxZ9o/edit?usp=sharing')">
                 <svg class="icon-arrow before">
                     <use xlink:href="#arrow"></use>
                 </svg>
@@ -80,28 +82,48 @@
             </svg>
         </div>
         <div class="bottom-wave-spacer"></div>
-        <h1>Nathan</h1>
+        <h1>Hobbies</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
-            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
-            voluptate ab totam fugiat sint nihil?
+            Even though I'm a software engineer, I have somewhat of a life and enjoy quite a few things.
         </p>
+        <ul>
+            <li>Teaching myself German (sprichst du Deutsch?)</li>
+            <li>Developing my favorite side project: <span class="cyder-link" ,
+                    onclick="window.open('https://github.com/nathancheshire/Cyder')">
+                    Cyder</span>
+            </li>
+            <li>Reading self-development books</li>
+            <li>Learning complex analysis</li>
+            <li>Practicing guitar</li>
+            <li>Weight Training</li>
+            <li>Running</li>
+        </ul>
+    </section>
+    <section class="blue">
+        <h1>Awards/Honors</h1>
+        <ul>
+            <li>Eagle Scout</li>
+            <li>Second Degree Black Belt</li>
+            <li>Perfect Attendance Award for MSU (6 semesters)</li>
+        </ul>
+        <div class="wave">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
     </section>
     <section>
-        <h1>Nathan</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
-            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
-            voluptate ab totam fugiat sint nihil?
-        </p>
-    </section>
-    <section>
-        <h1>Nathans</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium nesciunt reprehenderit cupiditate
-            distinctio, numquam perspiciatis praesentium ipsum expedita dolores libero facilis aperiam facere laborum
-            voluptate ab totam fugiat sint nihil?
-        </p>
+        <div class="awards-wave-bottom">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            </svg>
+        </div>
+        <div class="degree-spacer"></div>
+        <h1>Software Engineering, Bachelor of Science</h1>
+        <img src="images/diploma.jpg" alt="Software Engineering Degree" width=calc(1.37549019608 * 600), height=600>
         <div class="contact-cards-spacer">
             <div class="contact-cards-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -114,22 +136,22 @@
         </div>
     </section>
     <div class="contact-cards">
+        <div class="gmail-parent">
+            <div class="gmail">
+                <img src="svgs/gmail.svg" width=120, height=120 class="gmail-logo">
+                <div class="gmail-name">Nate@NathanCheshire.com</div>
+            </div>
+        </div>
         <div class="discord-parent">
             <div class="discord">
                 <img src="svgs/discord.svg" width=250, height=250 class="discord-logo">
                 <div class="discord-name">Natche#8845</div>
             </div>
         </div>
-        <div class="gmail-parent">
-            <div class="gmail">
-                <img src="svgs/gmail.svg" width=120, height=120 class="gmail-logo">
-                <div class="gmail-name">Nate@nathancheshire.com</div>
-            </div>
-        </div>
     </div>
     <div class="footer">
         <p class="footer-left">
-            Nate@NathanCheshire.com
+            GitHub.com/NathanCheshire
         </p>
         <p class="footer-center">
         </p>
