add github cards

--- a/index.html
+++ b/index.html
@@ -117,13 +117,45 @@
     </section>
     <section>
         <div class="awards-wave-bottom">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
             </svg>
         </div>
+        <div class="github-projects-spacer"></div>
+        <h1>GitHub Projects, some of my favorites include...</h1>
+        <div class="github-card" onclick="window.open('https://github.com/nathancheshire/Cyder')">
+            <div class="github-card-title">Cyder</div>
+            <div class="github-card-inner-spacer"></div>
+            Multipurpose GUI tool written entirely in Java using a custom UI library built over Swing
+        </div>
+        <div class="github-projects-card-spacer"></div>
+        <div class="github-card" onclick="window.open('https://github.com/nathancheshire/StudentScraper')">
+            <div class="github-card-title">StudentScraper</div>
+            <div class="github-card-inner-spacer"></div>
+            Data scraper and visualizations for the MSU student directory (dockerized)
+        </div>
+        <div class="github-projects-card-spacer"></div>
+        <div class="github-card" onclick="window.open('https://github.com/nathancheshire/Punch')">
+            <div class="github-card-title">Punch</div>
+            <div class="github-card-inner-spacer"></div>
+            A time-card logging program, written for small businesses who do not want to pay for software
+        </div>
+        <div class="github-projects-card-spacer"></div>
+        <div class="github-card" onclick="window.open('https://github.com/nathancheshire/PacMan')">
+            <div class="github-card-title">PacMan</div>
+            <div class="github-card-inner-spacer"></div>
+            A pathfinding project bundled with the familiar game of Pac-man
+        </div>
+    </section>
+    <div>Do a blob here</div>
+    <section>
         <div class="degree-spacer"></div>
-        <h1>Software Engineering, Bachelor of Science</h1>
-        <img src="images/diploma.jpg" alt="Software Engineering Degree" width=calc(1.37549019608 * 600), height=600>
+        <h1>Software Engineering Degree, Bachelor of Science</h1>
+        <img src="images/diploma.jpg" alt="Software Engineering Degree" class="degree-image" width=calc(1.37549019608 *
+            600), height=600>
         <div class="contact-cards-spacer">
             <div class="contact-cards-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
