add favicon and finish blob

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathan Cheshire</title>
+    <title>Nate Cheshire</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="index.css" </head>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='images/linus.png'/>
 <body>
     <h1>
         "Hello There" - Obi-Wan Kenobi
@@ -152,33 +153,34 @@
     </section>
     <div class="blob-spacer-top"></div>
     <h2>Woah! You've been scrolling for a while. Have a break and check out this cool blob I made</h2>
-    <svg id="visual" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-        <g transform="translate(452.0668170354797 293.5084027799085)">
-            <path id="blob1"
-                d="M176.8 -175.6C212.1 -141.4 212 -70.7 210 -2C208 66.7 204.1 133.4 168.7 172.4C133.4 211.4 66.7 222.7 11.8 210.9C-43.1 199.1 -86.3 164.3 -130.1 125.3C-173.9 86.3 -218.5 43.1 -214.6 3.9C-210.7 -35.4 -158.4 -70.7 -114.5 -104.9C-70.7 -139 -35.4 -172 17.7 -189.7C70.7 -207.4 141.4 -209.8 176.8 -175.6"
-                fill="#588df0"></path>
-        </g>
-        <g transform="translate(481.7242005645884 336.3187077945488)">
-            <path id="blob2"
-                d="M109.4 -120.7C148 -70.7 190 -35.4 198.7 8.7C207.5 52.8 182.9 105.6 144.3 131.8C105.6 157.9 52.8 157.5 -8 165.5C-68.8 173.5 -137.7 190 -187.3 163.8C-237 137.7 -267.5 68.8 -263.6 3.9C-259.7 -61 -221.4 -122.1 -171.8 -172.1C-122.1 -222.1 -61 -261 -12.8 -248.2C35.4 -235.4 70.7 -170.7 109.4 -120.7"
-                fill="#588df0"></path>
-        </g>
-    </svg>
+    <div class="bloby">
+        <svg id="blob" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+            <g transform="translate(452.0668170354797 293.5084027799085)">
+                <path id="blob1"
+                    d="M176.8 -175.6C212.1 -141.4 212 -70.7 210 -2C208 66.7 204.1 133.4 168.7 172.4C133.4 211.4 66.7 222.7 11.8 210.9C-43.1 199.1 -86.3 164.3 -130.1 125.3C-173.9 86.3 -218.5 43.1 -214.6 3.9C-210.7 -35.4 -158.4 -70.7 -114.5 -104.9C-70.7 -139 -35.4 -172 17.7 -189.7C70.7 -207.4 141.4 -209.8 176.8 -175.6"
+                    fill="#588df0"></path>
+            </g>
+            <g transform="translate(481.7242005645884 336.3187077945488)" style="visibility: hidden">
+                <path id="blob2"
+                    d="M109.4 -120.7C148 -70.7 190 -35.4 198.7 8.7C207.5 52.8 182.9 105.6 144.3 131.8C105.6 157.9 52.8 157.5 -8 165.5C-68.8 173.5 -137.7 190 -187.3 163.8C-237 137.7 -267.5 68.8 -263.6 3.9C-259.7 -61 -221.4 -122.1 -171.8 -172.1C-122.1 -222.1 -61 -261 -12.8 -248.2C35.4 -235.4 70.7 -170.7 109.4 -120.7"
+                    fill="#588df0"></path>
+            </g>
+        </svg>
+    </div>
     <section>
         <div class="degree-spacer"></div>
         <h1>Software Engineering Degree, Bachelor of Science</h1>
-        <img src="images/diploma.jpg" alt="Software Engineering Degree" class="degree-image" width=calc(1.37549019608 *
-            600), height=600>
-        <div class="contact-cards-spacer">
-            <div class="contact-cards-wave">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path
-                        d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                        class="shape-fill"></path>
-                </svg>
-            </div>
+        <img src="images/diploma.jpg" alt="Software Engineering Degree" class="degree-image" , width=calc(1.37549019608
+            *600), height=600>
+        <div class="contact-cards-spacer"></div>
+        <div class="contact-cards-wave">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
         </div>
     </section>
     <div class="contact-cards">
@@ -209,11 +211,12 @@
 <script>
     const tween = KUTE.fromTo(
         '#blob1',
-        {path: 'blob1'},
-        {path: 'blob2'},
-        {repeat: 1000, duration: 3000, yoyo: true}
+        { path: '#blob1' },
+        { path: '#blob2' },
+        { repeat: 1000, duration: 2000, yoyo: true }
     )
 
     tween.start()
 </script>
+
 </html>
