--- a/index.html
+++ b/index.html
@@ -155,19 +155,21 @@
     <div class="blob-spacer-top"></div>
     <h2>Woah! You've been scrolling for a while. Have a break and check out this cool blob I made</h2>
     <div class="bloby">
-        <svg id="blob" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-            <g transform="translate(452.0668170354797 293.5084027799085)">
-                <path id="blob1"
-                    d="M176.8 -175.6C212.1 -141.4 212 -70.7 210 -2C208 66.7 204.1 133.4 168.7 172.4C133.4 211.4 66.7 222.7 11.8 210.9C-43.1 199.1 -86.3 164.3 -130.1 125.3C-173.9 86.3 -218.5 43.1 -214.6 3.9C-210.7 -35.4 -158.4 -70.7 -114.5 -104.9C-70.7 -139 -35.4 -172 17.7 -189.7C70.7 -207.4 141.4 -209.8 176.8 -175.6"
-                    fill="#588df0"></path>
-            </g>
-            <g transform="translate(481.7242005645884 336.3187077945488)" style="visibility: hidden">
-                <path id="blob2"
-                    d="M109.4 -120.7C148 -70.7 190 -35.4 198.7 8.7C207.5 52.8 182.9 105.6 144.3 131.8C105.6 157.9 52.8 157.5 -8 165.5C-68.8 173.5 -137.7 190 -187.3 163.8C-237 137.7 -267.5 68.8 -263.6 3.9C-259.7 -61 -221.4 -122.1 -171.8 -172.1C-122.1 -222.1 -61 -261 -12.8 -248.2C35.4 -235.4 70.7 -170.7 109.4 -120.7"
-                    fill="#588df0"></path>
-            </g>
-        </svg>
+        <div>
+            <svg id="blob" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+                <g transform="translate(452.0668170354797 293.5084027799085)">
+                    <path id="blob1"
+                        d="M176.8 -175.6C212.1 -141.4 212 -70.7 210 -2C208 66.7 204.1 133.4 168.7 172.4C133.4 211.4 66.7 222.7 11.8 210.9C-43.1 199.1 -86.3 164.3 -130.1 125.3C-173.9 86.3 -218.5 43.1 -214.6 3.9C-210.7 -35.4 -158.4 -70.7 -114.5 -104.9C-70.7 -139 -35.4 -172 17.7 -189.7C70.7 -207.4 141.4 -209.8 176.8 -175.6"
+                        fill="#588df0"></path>
+                </g>
+                <g transform="translate(481.7242005645884 336.3187077945488)" style="visibility: hidden">
+                    <path id="blob2"
+                        d="M109.4 -120.7C148 -70.7 190 -35.4 198.7 8.7C207.5 52.8 182.9 105.6 144.3 131.8C105.6 157.9 52.8 157.5 -8 165.5C-68.8 173.5 -137.7 190 -187.3 163.8C-237 137.7 -267.5 68.8 -263.6 3.9C-259.7 -61 -221.4 -122.1 -171.8 -172.1C-122.1 -222.1 -61 -261 -12.8 -248.2C35.4 -235.4 70.7 -170.7 109.4 -120.7"
+                        fill="#588df0"></path>
+                </g>
+            </svg>
+        </div>
     </div>
     <section>
         <div class="degree-spacer"></div>
